Bug 776376 - Hardcode navigator.productSub to 20100101 for backward compatibility. r=bz sr=jst